# swe-agent-lite

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: sample_suite.txt
src/swe_agent_lite/: __init__.py  agent.py  analysis.py  cli.py  config.py  models.py  runner.py  scorer.py  storage.py  tasks.py  tools.py
tasks/01-off-by-one/: task.yaml
tasks/01-off-by-one/repo/: solution.py
tasks/01-off-by-one/tests/: test_solution.py
tasks/02-empty-list/: task.yaml
tasks/02-empty-list/repo/: solution.py
tasks/02-empty-list/tests/: test_solution.py
tasks/03-wrong-comparison/: task.yaml
tasks/03-wrong-comparison/repo/: solution.py
tasks/03-wrong-comparison/tests/: test_solution.py
tasks/04-dict-typo/: task.yaml
tasks/04-dict-typo/repo/: solution.py
tasks/04-dict-typo/tests/: test_solution.py
tasks/05-mutable-default/: task.yaml
tasks/05-mutable-default/repo/: solution.py
tasks/05-mutable-default/tests/: test_solution.py
tasks/06-silent-swallow/: task.yaml
tasks/06-silent-swallow/repo/: solution.py
tasks/06-silent-swallow/tests/: test_solution.py
tasks/07-missing-filter/: task.yaml
tasks/07-missing-filter/repo/: solution.py
tasks/07-missing-filter/tests/: test_solution.py
tasks/08-recursion-base/: task.yaml
tasks/08-recursion-base/repo/: solution.py
tasks/08-recursion-base/tests/: test_solution.py
tasks/09-circular-import/: task.yaml
tasks/09-circular-import/repo/: formatter.py
tasks/09-circular-import/tests/: test_solution.py
tasks/10-validator-mismatch/: task.yaml
tasks/10-validator-mismatch/repo/: parser.py  validator.py
tasks/10-validator-mismatch/tests/: test_solution.py
tasks/11-wrong-regex/: task.yaml
tasks/11-wrong-regex/repo/: solution.py
tasks/11-wrong-regex/tests/: test_solution.py
tasks/12-missing-import/: task.yaml
tasks/12-missing-import/repo/: solution.py
tasks/13-shared-state-bug/: task.yaml
tests/: test_agent.py  test_analysis.py  test_scorer.py  test_tasks.py  test_tools.py
(+4 files in other folders)
