[project]
name = "swe-agent-lite"
version = "0.2.0"
description = "A SWE-bench-style agent benchmark for Claude. 13 curated bug-fix tasks (3 multi-file), sandboxed workspace, pytest-based scoring, per-task failure-mode tags."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dhruv Patel", email = "dhruv17062000@gmail.com" }]
keywords = ["claude", "agents", "tool-use", "swe-bench", "benchmarks", "llm-evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
]

[project.scripts]
swe-agent-lite = "swe_agent_lite.cli:app"

[project.urls]
Homepage = "https://github.com/dhruvpatel1706/swe-agent-lite"
Issues = "https://github.com/dhruvpatel1706/swe-agent-lite/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swe_agent_lite"]

[tool.hatch.build.targets.wheel.force-include]
"tasks" = "swe_agent_lite/tasks_bundle"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
# Exclude the curated task suite's own tests — they're the benchmark,
# not our project's tests, and they're deliberately broken.
norecursedirs = ["tasks", ".venv", ".git"]
